--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -25,4 +25,4 @@ jobs:
             - name: Update repo with new data
               uses: stefanzweifel/git-auto-commit-action@v5
               with:
-                  commit_message: automated update
+                  commit_message: "chore: update xkcd comic"
