--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -18,6 +18,11 @@ jobs:
         with:
           python-version: "3.13.x"
           cache: "pip"
+      - name: Cache build
+        uses: actions/cache@v4
+        with:
+          path: ~/cache_build
+          key: ${{ runner.os }}-${{ hashFiles('./requirements.txt') }}
       - name: Install dependencies
         run: pip install -r requirements.txt
       - name: Check codes
